fix(envelop): search方法非标准信封改为标准信封
